--- a/index.html
+++ b/index.html
@@ -1497,7 +1497,7 @@ limitations under the License.
     }
 
     body {
-      background-color: rgba(249, 223, 241, 0.7);
+      background-color: rgba(102, 10, 76, 0.391);
       background-blend-mode: lighten;
       background-position: center;
       background-size: 300vh;
@@ -2489,7 +2489,7 @@ limitations under the License.
 
     .ampstart-footer {
       font-family: Inconsolata, verdana, sans-serif;
-      color: #3e6458;
+      color: #00ffae;
       padding-top: 1rem;
       padding-bottom: 1.5rem;
       background-color: transparent;
@@ -2505,7 +2505,7 @@ limitations under the License.
     }
 
     .ampstart-footer .ampstart-icon {
-      fill: #3e6458;
+      fill: #ffffff;
     }
 
     .ampstart-footer .ampstart-social-follow li:last-child {
