--- a/index copy.html
+++ b/index copy.html
@@ -202,8 +202,10 @@
       <amp-story-grid-layer template="vertical">
         <h2 class="overlay-text">Exploring the World</h2>
         <p class="overlay-text">A journey through stunning landscapes.</p>
-        <a href="https://minnowspace.com/biochar.html" class="cta-button">Read Story</a>
       </amp-story-grid-layer>
+      <amp-story-cta-layer>
+        <a href="https://minnowspace.com/biochar.html" class="cta-button">Read More</a>
+      </amp-story-cta-layer>
     </amp-story-page>
 
     <!-- Instagram Highlights -->
@@ -226,6 +228,9 @@
         <p class="overlay-text">Subscribe to get the latest stories and updates.</p>
         <a href="/subscribe" class="cta-button">Subscribe Now</a>
         <a href="/stories" class="cta-button">Explore Stories</a>
+        <amp-story-cta-layer>
+          <a href="https://minnowspace.com/subscribe" class="cta-button">Subscribe Now</a>
+        </amp-story-cta-layer>
       </amp-story-grid-layer>
     </amp-story-page>
 
