--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <script async src="https://cdn.ampproject.org/amp-story-player-v0.js"></script>
+  <script async custom-element="amp-story-player" src="https://cdn.ampproject.org/v0/amp-story-player-0.1.js"></script>
   <meta name="amp-consent-blocking" content="amp-ad">
   
   <meta name="amp-google-client-id-api" content="googleanalytics" />
