--- a/fall.html
+++ b/fall.html
@@ -4,11 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>Fall Ingredients</title>
+
+  
   <link rel="canonical" href="minnowspace.com/fall.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="amp-google-client-id-api" content="googleanalytics">
   <meta name="google-adsense-account" content="ca-pub-3239465181490887">
-  <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
+  <script async custom-element="amp-story-auto-analytics"
+    src="https://cdn.ampproject.org/v0/amp-story-auto-analytics-0.1.js"></script>
+ 
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
   <style amp-boilerplate>
     body {
@@ -138,33 +142,13 @@
 
 <body>
 
-    <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="10">
-      <script id="hello-world" type="text/plain" target="amp-script">
-       window.dataLayer = window.dataLayer || [];
-          function gtag() { dataLayer.push(arguments); }
-          gtag('js', new Date());
-    
-          gtag('config', 'G-V3TNNSX3H4');
-    </script>
-    </amp-script>
-    <!--maybe delete above-->
-    <amp-analytics type="gtag" data-credentials="include">
-      <script type="application/json">
-        {
-        "vars" : { 
-            "gtag_id": "G-V3TNNSX3H4", 
-            "config": { 
-                "G-V3TNNSX3H4": { 
-                      "groups": "default" 
-                      }
-                                      }
-              }
-          } 
-     </script>
-    </amp-analytics>
+ 
   <!-- Cover page -->
-  <amp-story standalone title="Fall Ingredients" publisher="AMP tutorials"
-    publisher-logo-src="assets/AMP-Brand-White-Icon.svg" poster-portrait-src="assets/cover.jpg">
+  <amp-story standalone title="Fall Ingredients" publisher="Minnow News Network"
+    publisher-logo-src="img/fish.png" poster-portrait-src="img/fall.png">
+
+    <amp-story-auto-analytics gtag-id="G-V3TNNSX3H4"></amp-story-auto-analytics>
+
     <amp-story-page id="cover" background-audio="assets/bach.mp3">
       <amp-story-grid-layer template="fill">
         <amp-img src="assets/cover.png" width="720" height="1280" layout="responsive">
