--- a/banksy.html
+++ b/banksy.html
@@ -167,7 +167,7 @@
     </amp-analytics>
   
   <!-- Cover page -->
-  <amp-story standalone title="New Banksy at the Royal Courts of Justice" publisher="Minnow News Network"
+  <amp-story standalone supports-landscape title="New Banksy at the Royal Courts of Justice" publisher="Minnow News Network"
     publisher-logo-src="assets/AMP-Brand-White-Icon.svg" poster-portrait-src="./assets/banksy.avif"
     >
     <amp-story-page id="cover">
