--- a/gamestop.html
+++ b/gamestop.html
@@ -164,7 +164,7 @@
   </amp-analytics>
 
 
-  <amp-story standalone title="GameStop's High-Stakes Wager" publisher="Minnow News Network"
+  <amp-story standalone supports-landscape title="GameStop's High-Stakes Wager" publisher="Minnow News Network"
     publisher-logo-src="assets/AMP-Brand-White-Icon.svg" poster-portrait-src="assets/gamestop_store.jpg">
     <amp-story-page id="cover">
       <amp-story-grid-layer template="fill">
@@ -184,7 +184,8 @@
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
         <h1>The Surprise Financials</h1>
-        <p style="background-color: rgba(0,0,0,0.7);">GameStop reported a major beat on both revenue and earnings, a rare positive sign for a company that has struggled with its core business.  Not Financial Advise lol.</p>
+        <p style="background-color: rgba(0,0,0,0.7);">GameStop reported a major beat on both revenue and earnings, a
+          rare positive sign for a company that has struggled with its core business. Not Financial Advise lol.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
@@ -192,7 +193,8 @@
     <amp-story-page id="page2">
       <amp-story-grid-layer template="vertical">
         <h1>Why the "Beat" Matters</h1>
-        <p>The beat was driven by cost-cutting and a surprising boost in sales of hardware and collectibles. However, software sales have declined, showing the company's shift away from its original business model.</p>
+        <p>The beat was driven by cost-cutting and a surprising boost in sales of hardware and collectibles. However,
+          software sales have declined, showing the company's shift away from its original business model.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
@@ -200,44 +202,50 @@
     <amp-story-page id="page3">
       <amp-story-grid-layer template="vertical">
         <h1>Decoding the Warrants</h1>
-        <p>GameStop announced a special dividend of warrants, a financial instrument that gives shareholders the right, but not the obligation, to buy more stock at a set price ($32.00) for a specific period (until October 2026).</p>
+        <p>GameStop announced a special dividend of warrants, a financial instrument that gives shareholders the right,
+          but not the obligation, to buy more stock at a set price ($32.00) for a specific period (until October 2026).
+        </p>
       </amp-story-grid-layer>
     </amp-story-page>
 
     <!-- Page 4 -->
     <amp-story-page id="page4">
-        <amp-story-grid-layer template="vertical">
-          <h1>A Genius Move or a Calculated Gamble?</h1>
-          <p>GameStop could raise up to $1.9 billion in gross proceeds if all warrants are exercised. This is a massive capital injection that can be used for "general corporate purposes, including potential acquisitions".</p>
-        </amp-story-grid-layer>
-      </amp-story-page>
+      <amp-story-grid-layer template="vertical">
+        <h1>A Genius Move or a Calculated Gamble?</h1>
+        <p>GameStop could raise up to $1.9 billion in gross proceeds if all warrants are exercised. This is a massive
+          capital injection that can be used for "general corporate purposes, including potential acquisitions".</p>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
     <!-- Page 5 -->
     <amp-story-page id="page5">
-        <amp-story-grid-layer template="fill">
-            <amp-img src="assets/ryan_cohen.jpg" width="720" height="1280" layout="responsive">
-            </amp-img>
-          </amp-story-grid-layer>
+      <amp-story-grid-layer template="fill">
+        <amp-img src="assets/ryan_cohen.jpg" width="720" height="1280" layout="responsive">
+        </amp-img>
+      </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
         <h1>The Ryan Cohen Playbook</h1>
-        <p>These recent moves are part of CEO Ryan Cohen's larger, evolving strategy to pivot the company's cash hoard away from traditional retail.</p>
+        <p>These recent moves are part of CEO Ryan Cohen's larger, evolving strategy to pivot the company's cash hoard
+          away from traditional retail.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
     <!-- Page 6 -->
     <amp-story-page id="page6">
-        <amp-story-grid-layer template="vertical">
-          <h1>The "Meme" Factor</h1>
-          <p>The warrants are a dividend specifically designed to reward and engage the long-standing "Ape" community, which could fuel a new wave of interest and volatility.</p>
-        </amp-story-grid-layer>
-      </amp-story-page>
+      <amp-story-grid-layer template="vertical">
+        <h1>The "Meme" Factor</h1>
+        <p>The warrants are a dividend specifically designed to reward and engage the long-standing "Ape" community,
+          which could fuel a new wave of interest and volatility.</p>
+      </amp-story-grid-layer>
+    </amp-story-page>
 
     <!-- Page 7 -->
     <amp-story-page id="page7">
-    <amp-story-grid-layer template="vertical">
+      <amp-story-grid-layer template="vertical">
         <h1>A Risky Bet with High Reward Potential</h1>
-        <p>Will this new capital be deployed successfully? Will Ryan Cohen's unconventional strategy finally lead to a sustainable, profitable business, or is this just another chapter in the ongoing GameStop speculation?</p>
-    </amp-story-grid-layer>
+        <p>Will this new capital be deployed successfully? Will Ryan Cohen's unconventional strategy finally lead to a
+          sustainable, profitable business, or is this just another chapter in the ongoing GameStop speculation?</p>
+      </amp-story-grid-layer>
     </amp-story-page>
 
     <!-- Bookend -->
