--- a/zen-swing.html
+++ b/zen-swing.html
@@ -135,15 +135,15 @@
 
 <body>
   <!-- Cover page -->
-  <amp-story standalone title="The Zen Swing" publisher="AMP tutorials"
+  <amp-story standalone supports-landscape title="The Zen Swing" publisher="AMP tutorials"
     publisher-logo-src="assets/AMP-Brand-White-Icon.svg" poster-portrait-src="assets/zen.png">
     <amp-story-page id="cover">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/zen.png" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/zen2.png" width="720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
-        <h1 style="color:darkgreen">The Zen Swing</h1>
+        <h1 style="color:rgb(255, 255, 255)">The Zen Swing</h1>
         <p style="color:darkgreen">A simple, rhythmic movement for health and well-being.</p>
       </amp-story-grid-layer>
     </amp-story-page>
@@ -153,22 +153,25 @@
       <amp-story-grid-layer template="fill">
         <amp-video autoplay loop width="720" height="1280" poster="assets/cover.png" layout="responsive">
           <source src="assets/5645057-hd_1920_1080_25fps.mp4" type="video/mp4">
-        </video>
+          </video>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
         <h1>What is the Zen Swing?</h1>
-        <p>The "Zen Swing" is a deceptively simple, rhythmic movement from the ancient Chinese practice of Qigong. It's a form of moving meditation that links the body's physical motion with its internal energy, or Qi.</p>
+        <p>The "Zen Swing" is a deceptively simple, rhythmic movement from the ancient Chinese practice of Qigong. It's
+          a form of moving meditation that links the body's physical motion with its internal energy, or Qi.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
     <!-- Page 2 -->
     <amp-story-page id="page2">
-        <amp-story-grid-layer template="fill">
-            <amp-img src="assets/mill.jpg" width="720" height="1280" layout="responsive">
-            </amp-img>
-        </amp-story-grid-layer>
+      <amp-story-grid-layer template="fill">
+        <amp-img src="assets/mill.jpg" width="720" height="1280" layout="responsive">
+        </amp-img>
+      </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
-        <p style="background-color: rgba(0, 0, 0, 0.7);">Stand with feet shoulder-width apart, knees slightly bent. As your body's weight shifts from the left to the right leg, your arms, completely relaxed, swing like pendulums across your torso.</p>
+        <p style="background-color: rgba(0, 0, 0, 0.7);">Stand with feet shoulder-width apart, knees slightly bent. As
+          your body's weight shifts from the left to the right leg, your arms, completely relaxed, swing like pendulums
+          across your torso.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
@@ -177,10 +180,11 @@
       <amp-story-grid-layer template="fill">
         <amp-video autoplay loop width="720" height="1280" poster="assets/orchard.jpg" layout="responsive">
           <source src="assets/appletree.mp4" type="video/mp4">
-        </video>
+          </video>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
-        <p style="background-color: rgba(0, 0, 0, 0.7);">The gentle twisting massages your abdominal organs, stimulating peristalsis, aiding lymphatic drainage, and reducing stress.</p>
+        <p style="background-color: rgba(0, 0, 0, 0.7);">The gentle twisting massages your abdominal organs, stimulating
+          peristalsis, aiding lymphatic drainage, and reducing stress.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
