amp for index.html is valid

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
   <script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
   <link rel="canonical" href="https://amp.dev/documentation/guides-and-tutorials/start/create/basic_markup/">
-  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+
 
   <style amp-boilerplate>
     body {
@@ -91,17 +91,9 @@
       }
     </style>
   </noscript>
-  <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
 
 
-  <link href="https://cdn.ampproject.org/amp-story-player-v0.css" rel="stylesheet" type="text/css">
 
-  <link href="./styles/main.css" rel="stylesheet" type="text/css">
-  <link href="./styles/header.css" rel="stylesheet" type="text/css">
-  <link href="./styles/hero.css" rel="stylesheet" type="text/css">
-  <link href="./styles/cards.css" rel="stylesheet" type="text/css">
-  <link href="./styles/carousel.css" rel="stylesheet" type="text/css">
-  <link href="./styles/hamburger.css" rel="stylesheet" type="text/css">
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins&amp;display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -226,7 +218,7 @@
     </button>
   </amp-lightbox>
 
-  <amp-carousel width="400" height="600" type="carousel" layout="fixed-height" loop controls>
+  <amp-carousel width="auto" height="600" type="carousel" layout="fixed-height" loop controls>
 
     <amp-story-player layout="fixed" width="360" height="600">
       <a href="./biochar.html" target=_top> Biochar </a>
