--- a/story_template.html
+++ b/story_template.html
@@ -94,7 +94,7 @@
     <amp-story-page id="cover">
       <amp-story-grid-layer template="fill">
         <!-- TODO: Replace with your cover image -->
-        <amp-img src="assets/placeholder.jpg" width="720" height="1280" layout="responsive"></amp-img>
+        <amp-img src="assets/banksy.jpg" width="720" height="1280" layout="responsive"></amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
         <!-- TODO: Replace with your story title -->
@@ -106,7 +106,7 @@
     <amp-story-page id="page1">
       <amp-story-grid-layer template="fill">
         <!-- TODO: Replace with your image -->
-        <amp-img src="assets/placeholder.jpg" width="720" height="1280" layout="responsive"></amp-img>
+        <amp-img src="assets/banksy.jpg" width="720" height="1280" layout="responsive"></amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
         <!-- TODO: Replace with your text -->
