--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       --card-background: #ffffff;
       --text-color: #333;
       --heading-color: #000;
-      --accent-color: #1877f2;
+      --accent-color: #0D55B5;
       --shadow: 0 2px 4px rgba(0,0,0,0.1);
       --border-radius: 8px;
     }
