--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <div class="articles-grid">
       <a href="austin-music-sept-18-2025.html" class="article-card featured">
         <div class="card-image">
-          <amp-img src="assets/Gemini_Generated_Image_h0wjz9h0wjz9h0wj.png" width="895" height="895" layout="responsive" alt="Austin Music Scene"></amp-img>
+          <amp-img src="assets/Gemini_Generated_Image_h0wjz9h0wjz9h0wj.webp" width="895" height="895" layout="responsive" alt="Austin Music Scene"></amp-img>
         </div>
         <div class="card-content">
           <h3>Austin's Got the Vibe Tonight: Your Guide to Live Music on Sept 18th!</h3>
