--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="amp-google-client-id-api" content="googleanalytics" />
   <meta name="description" content="Minnow News brings you the latest trending stories, viral headlines, and in-depth articles on everything from pop culture to tech. Stay ahead of the curve with our daily news updates.">
   <meta name="author" content="MINNOWSPACE">
+  <link rel="preload" as="font" href="https://fonts.googleapis.com/css2?family=Poppins&amp;display=swap" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&amp;display=swap" rel="stylesheet">
   <link rel="canonical" href="https://minnowspace.com/index.html">
   <link rel="preload" href="assets/Gemini_Generated_Image_h0wjz9h0wjz9h0wj.webp" as="image">
@@ -29,8 +30,7 @@
     body {
       background-color: var(--background);
       color: var(--text-color);
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      line-height: 1.5;
+      font-family: "Poppins", "Helvetica Neue", Helvetica, Arial, sans-serif;      line-height: 1.5;
       margin: 0;
     }
     .header {
@@ -203,9 +203,7 @@
             }
        </script>
   </amp-analytics>
-  <amp-analytics
-    config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL&dma_cps=ads%2Cmaps%2Cplaystore%2Csearch%2Cshopping%2Cyoutube"
-    data-credentials="include"></amp-analytics>
+
   <amp-auto-ads type="adsense" data-ad-client="ca-pub-3239465181490887">
   </amp-auto-ads>
   <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
@@ -226,7 +224,7 @@
       </a>
       <a href="coachella-2026.html" class="article-card">
         <div class="card-image">
-          <amp-img src="https://upload.wikimedia.org/wikipedia/commons/d/da/Justin_Bieber_in_2015.jpg" width="626" height="895" layout="responsive" alt="Coachella 2026"></amp-img>
+          <amp-img src="assets/Justin_Bieber_in_2015 (1).jpg" width="626" height="895" layout="responsive" alt="Coachella 2026"></amp-img>
         </div>
         <div class="card-content">
           <h3>Coachella 2026 Lineup Announced!</h3>
@@ -235,7 +233,7 @@
       </a>
       <a href="robert_redford.html" class="article-card">
         <div class="card-image">
-          <amp-img src="https://upload.wikimedia.org/wikipedia/commons/d/dd/Robert_Redford_1973-2.jpg" width="897" height="895" layout="responsive" alt="Robert Redford"></amp-img>
+          <amp-img src="assets/Robert_Redford_1973-2.jpg" width="897" height="895" layout="responsive" alt="Robert Redford"></amp-img>
         </div>
         <div class="card-content">
           <h3>Robert Redford: A Hollywood Legend</h3>
@@ -244,7 +242,7 @@
       </a>
       <a href="ben_and_jerrys.html" class="article-card">
         <div class="card-image">
-          <amp-img src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Ben_%26_Jerry%27s_Cookie_Dough_Ice_Cream_465_ml%2C_May_2025.jpg" width="1127" height="844" layout="responsive" alt="Ben & Jerry's"></amp-img>
+          <amp-img src="assets/Ben_&_Jerry's_Cookie_Dough_Ice_Cream_465_ml,_May_2025.jpg" width="1127" height="844" layout="responsive" alt="Ben & Jerry's"></amp-img>
         </div>
         <div class="card-content">
           <h3>Ben & Jerry's Co-Founder Quits</h3>
