--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="amp-google-client-id-api" content="googleanalytics" />
   <meta name="description" content="Minnow News brings you the latest trending stories, viral headlines, and in-depth articles on everything from pop culture to tech. Stay ahead of the curve with our daily news updates.">
   <meta name="author" content="MINNOWSPACE">
-  <link rel="preload" as="font" href="https://fonts.googleapis.com/css2?family=Poppins&amp;display=swap" crossorigin>
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&amp;display=swap">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&amp;display=swap" rel="stylesheet">
   <link rel="canonical" href="https://minnowspace.com/index.html">
   <link rel="preload" href="assets/Gemini_Generated_Image_h0wjz9h0wjz9h0wj.webp" as="image">
