--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
   <meta name="amp-google-client-id-api" content="googleanalytics" />
   <meta name="description" content="Minnow News brings you the latest trending stories, viral headlines, and in-depth articles on everything from pop culture to tech. Stay ahead of the curve with our daily news updates.">
   <meta name="author" content="MINNOWSPACE">
-  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&amp;display=swap">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&amp;display=swap" rel="stylesheet">
   <link rel="canonical" href="https://minnowspace.com/index.html">
   <link rel="preload" href="assets/Gemini_Generated_Image_h0wjz9h0wjz9h0wj.webp" as="image">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -19,7 +17,7 @@
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <style amp-custom>
     :root {
-      --background: #f0f2f5;
+      --background: #000000;
       --card-background: #ffffff;
       --text-color: #333;
       --heading-color: #000;
@@ -30,7 +28,9 @@
     body {
       background-color: var(--background);
       color: var(--text-color);
-      font-family: "Poppins", "Helvetica Neue", Helvetica, Arial, sans-serif;      line-height: 1.5;
+      /* FIXED: Native/System Font Stack for zero CLS */
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+      line-height: 1.5;
       margin: 0;
     }
     .header {
