--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Minnow News brings you the latest trending stories, viral headlines, and in-depth articles on everything from pop culture to tech. Stay ahead of the curve with our daily news updates.">
   <meta name="author" content="MINNOWSPACE">
   <link rel="canonical" href="https://minnowspace.com/index.html">
-  <link rel="preload" href="assets/Gemini_Generated_Image_h0wjz9h0wjz9h0wj.webp" as="image">
+  <link rel="preload" href="assets/Gemini_Generated_Image_h0wjz9h0wjz9h0wj.webp" as="image" fetchpriority="high">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <title>Minnow News - Trending Stories and Viral Headlines</title>
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
@@ -215,7 +215,8 @@
     <div class="articles-grid">
       <a href="austin-music-sept-18-2025.html" class="article-card featured">
         <div class="card-image">
-          <amp-img src="assets/Gemini_Generated_Image_h0wjz9h0wjz9h0wj.webp" width="895" height="895" layout="responsive" alt="Austin Music Scene" data-hero></amp-img>
+          <amp-img src="assets/Gemini_Generated_Image_h0wjz9h0wjz9h0wj.webp" width="895" height="895" layout="responsive"
+            alt="Austin Music Scene" data-hero fetchpriority="high"></amp-img>
         </div>
         <div class="card-content">
           <h3>Austin's Got the Vibe Tonight: Your Guide to Live Music on Sept 18th!</h3>
